# photo_analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  setup.py
src/: gcs.py  request.py
src/prefect/: clean__bq__unsplash_napi__photos.py  extract__bq__unsplash_napi__photos.py  extract__gcs__unsplash_napi__photos.py  extract__unsplash_napi__photos.py
src/prefect/blocks/: bright_data.py  gcp.py
