[project]
name = "photo-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent>=2.2.0",
    "fastparquet>=2024.11.0",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "prefect>=3.4.19",
    "prefect-gcp>=0.6.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
